responsive login/register (fix landing overflow, position %)

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -757,6 +757,22 @@ footer .bottom .privacy .copyright {
   padding: 4px;
 }
 
+#appSearch .list-cards {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0 20%;
+  border-radius: 20px;
+  margin: 30px 0;
+}
+
+#appSearch .list-cards .list-card {
+  margin: 0 20px;
+  background-color: #ffc244;
+  min-height: 400px;
+  width: 100%;
+}
+
 main.details {
   background-color: whitesmoke;
 }
@@ -1975,6 +1991,10 @@ header nav .menulist li a {
   outline: none;
 }
 
+#landing-jumbo {
+  overflow-x: hidden;
+}
+
 #landing-jumbo #background-jumbo {
   min-height: 100vh;
   width: 100%;
@@ -1997,7 +2017,7 @@ header nav .menulist li a {
 }
 
 #landing-jumbo #background-jumbo .type {
-  z-index: 1;
+  z-index: 20;
 }
 
 #landing-jumbo #background-jumbo .type img {
@@ -2009,14 +2029,14 @@ header nav .menulist li a {
 
 #landing-jumbo #background-jumbo #cat-pizza {
   position: absolute;
-  top: 19%;
-  left: 42%;
+  top: 18%;
+  left: 48%;
 }
 
 #landing-jumbo #background-jumbo #cat-fast-food {
   position: absolute;
-  top: 20%;
-  left: 22%;
+  top: 18%;
+  left: 18%;
 }
 
 #landing-jumbo #background-jumbo #cat-sushi {
@@ -2054,7 +2074,7 @@ header nav .menulist li a {
 #landing-jumbo #background-jumbo #cat-carne {
   position: absolute;
   top: 67%;
-  left: 10%;
+  left: 6%;
 }
 
 #landing-jumbo #background-jumbo #cat-carne img {
@@ -2064,7 +2084,7 @@ header nav .menulist li a {
 #landing-jumbo #background-jumbo #cat-pesce {
   position: absolute;
   top: 62%;
-  left: 77%;
+  left: 83%;
 }
 
 #landing-jumbo #background-jumbo #cat-bakery {
@@ -2087,8 +2107,8 @@ header nav .menulist li a {
 
 #landing-jumbo #background-jumbo #cat-poke {
   position: absolute;
-  top: 20%;
-  left: 66%;
+  top: 14%;
+  left: 68%;
 }
 
 #landing-jumbo #background-jumbo #cat-poke img {
@@ -2099,7 +2119,7 @@ header nav .menulist li a {
 #landing-jumbo #landing-title {
   color: #000000;
   font-weight: bold;
-  z-index: 10;
+  z-index: 21;
   position: absolute;
   top: 50%;
   left: 50%;
@@ -2163,13 +2183,13 @@ header nav .menulist li a {
   background: white;
   padding: 15px 35px;
   text-align: center;
-  z-index: 20;
+  z-index: 40;
 }
 
 .popup-note:hover .pop {
   display: block;
   transform: scale(1.2);
-  z-index: 9998;
+  z-index: 40;
 }
 
 .popup-note:hover .up {
@@ -2615,6 +2635,7 @@ main#bye-container #container-result #scooter {
   padding-top: 30px;
   background-color: #FFC244;
   height: 100vh;
+  overflow-x: hidden;
 }
 
 #login_area #box_login {
@@ -2626,10 +2647,16 @@ main#bye-container #container-result #scooter {
 #login_area #box_login .left {
   height: 100%;
   width: 40%;
-  background-size: cover;
+  background-color: #FF5757;
+  background-size: contain;
   background-position: center;
+  background-repeat: no-repeat;
   border-bottom-left-radius: 10px;
   border-top-left-radius: 10px;
+}
+
+#login_area #box_login img#hidden-logo {
+  display: none;
 }
 
 #login_area #box_login .right {
@@ -2643,6 +2670,7 @@ main#bye-container #container-result #scooter {
   display: flex;
   flex-direction: column;
   justify-content: center;
+  align-items: center;
 }
 
 #login_area #box_login .right h2 {
@@ -2658,7 +2686,7 @@ main#bye-container #container-result #scooter {
   min-width: 100px;
   border-radius: 4px;
   text-align: center;
-  padding: 15px 100px;
+  padding: 15px 80px;
   margin-top: 30px;
   background-color: #000;
   color: #fff;
@@ -2691,7 +2719,6 @@ main#bye-container #container-result #scooter {
 #login_area #box_login .right form .floating-label input {
   font-size: 16px;
   padding: 20px 0px;
-  height: 56px;
   border: none;
   border-bottom: solid 3px rgba(0, 0, 0, 0.1);
   background: #fff;
@@ -2743,6 +2770,84 @@ main#bye-container #container-result #scooter {
 #login_area #box_login .right form .floating-label input:not(:placeholder-shown) + label {
   transform: translateY(-15px);
   opacity: 0.7;
+}
+
+@media (max-width: 1010px) and (min-width: 769px) {
+  #login_area #box_login {
+    width: 100%;
+    height: 80%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  #login_area #box_login .left {
+    display: none;
+  }
+
+  #login_area #box_login img#hidden-logo {
+    display: block;
+    width: 130px;
+    height: auto;
+    z-index: 999;
+  }
+
+  #login_area #box_login .right {
+    height: 100%;
+    width: 60%;
+    border-radius: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+
+  #login_area #box_login .right h2 {
+    margin-bottom: 20px;
+    font-size: 2.2rem;
+    font-weight: 400;
+    padding-top: 50px;
+  }
+}
+
+@media (max-width: 768px) {
+  #login_area {
+    padding: 25px;
+  }
+
+  #login_area #box_login {
+    min-width: 100%;
+    height: 80%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  #login_area #box_login .left {
+    display: none;
+  }
+
+  #login_area #box_login img#hidden-logo {
+    display: block;
+    width: 130px;
+    height: auto;
+    z-index: 999;
+  }
+
+  #login_area #box_login .right {
+    height: 100%;
+    min-width: 95%;
+    border-radius: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+
+  #login_area #box_login .right h2 {
+    margin-bottom: 20px;
+    font-size: 2.2rem;
+    font-weight: 400;
+    padding-top: 50px;
+  }
 }
 
 main.pay-order form {
